# frost-zkvm

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile  rust-toolchain
aggregator/: go.mod  go.sum  main.go
aggregator/policy/: artifacts.go  circuit.go  inner.go  prove.go
core/: Cargo.toml
core/src/: commit.rs  lib.rs  setup.rs  sign.rs  storage.rs  wire.rs
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml  build.rs
host/src/: main.rs  storage.rs
host/src/commands/: mod.rs  prove.rs  setup.rs  sign.rs
jolt/: Cargo.toml
jolt/guest/: Cargo.toml
jolt/guest/src/: lib.rs  main.rs
jolt/host/: Cargo.toml
jolt/host/src/: main.rs  prove.rs
risc0/: Cargo.toml
risc0/host/: Cargo.toml
risc0/host/src/: main.rs  prove.rs
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
sp1/: Cargo.toml
sp1/guest/: Cargo.toml
sp1/guest/src/: main.rs
sp1/host/: Cargo.toml
sp1/host/src/: main.rs  prove.rs
