[package]
name        = "host"
description = "FROST-Ed25519 coordinator + SP1 prover CLI."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
default-run = "host"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
# SP1 SDK with the blocking executor + the bundled gnark verifier for Groth16.
sp1-sdk       = { workspace = true }
# Same FROST stack as the guest, but with std/default features for ergonomics.
frost-ed25519 = { version = "3.0", features = ["serialization"] }
serde         = { workspace = true, features = ["derive", "alloc", "std"] }
bincode       = { workspace = true }
tiny-keccak   = { workspace = true }

clap        = { workspace = true }
anyhow      = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }
hex         = { workspace = true }

shared = { path = "../shared" }

[build-dependencies]
sp1-build = { workspace = true }
