[workspace]
members = ["host", "methods"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["wwwqqwq"]

[workspace.dependencies]
frost-ed25519 = { version = "3.0", default-features = false, features = ["serialization"] }
serde         = { version = "1", default-features = false, features = ["derive"] }
bincode       = { version = "2.0", default-features = false, features = ["serde", "alloc"] }
tiny-keccak   = { version = "2.0", features = ["keccak"] }

risc0-zkvm  = { version = "3.0.5" }
risc0-build = { version = "3.0.5" }

clap               = { version = "4.5", features = ["derive"] }
anyhow             = "1.0"
hex                = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

frost-core = { path = "../core", features = ["host"] }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
