[package]
name        = "shared"
description = "Wire-format types passed between the FROST host and the SP1 guest."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
serde         = { workspace = true, features = ["derive", "std"] }
frost-ed25519 = { workspace = true }
