[workspace]
members = ["guest", "host"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["wwwqqwq"]

[workspace.dependencies]
frost-ed25519 = { version = "3.0", default-features = false, features = ["serialization"] }
serde         = { version = "1", default-features = false, features = ["derive"] }
bincode       = { version = "2.0", default-features = false, features = ["serde", "alloc"] }
tiny-keccak   = { version = "2.0", features = ["keccak"] }

sp1-zkvm  = { version = "6.1.0" }
sp1-sdk   = { version = "6.1.0", features = ["blocking", "native-gnark"] }
sp1-build = { version = "6.1.0" }

clap        = { version = "4.5", features = ["derive"] }
anyhow      = "1.0"
rand        = "0.8"
rand_chacha = "0.3"
hex         = "0.4"

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-6.0.0" }
sha2             = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-6.0.0" }
tiny-keccak      = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-6.0.0" }
