[package]
name    = "frost-jolt-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []
field-inline = ["jolt/field-inline"]

[dependencies]
jolt = { workspace = true }
frost-ed25519 = { workspace = true }
frost-core      = { path = "../../core", default-features = false }
tiny-keccak     = { workspace = true }
