[package]
name        = "host"
description = "FROST-Ed25519 coordinator (Jolt backend)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "host"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
jolt = { workspace = true, features = ["host"] }
clap     = { workspace = true }
anyhow   = { workspace = true }
hex      = { workspace = true }
tiny-keccak = { workspace = true }
tracing-subscriber = { workspace = true }

frost-core = { path = "../../core", features = ["host"] }
guest      = { package = "frost-jolt-guest", path = "../guest" }
