[package]
name        = "guest"
description = "FROST-Ed25519 guest circuit."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true

[[bin]]
name = "guest"
path = "src/main.rs"

[dependencies]
sp1-zkvm      = { workspace = true }
frost-ed25519 = { workspace = true }
bincode       = { workspace = true }
tiny-keccak   = { workspace = true }
frost-core    = { path = "../../core", default-features = false }
