[package]
name        = "host"
description = "FROST-Ed25519 coordinator"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
default-run = "host"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
sp1-sdk       = { workspace = true }
bincode       = { workspace = true }
tiny-keccak   = { workspace = true }
clap          = { workspace = true }
anyhow        = { workspace = true }
hex           = { workspace = true }

frost-core = { path = "../../core", features = ["host"] }
[build-dependencies]
sp1-build = { workspace = true }
