[package]
name    = "frost_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm    = { version = "3.0.5", default-features = false, features = ["std", "unstable"] }
frost-ed25519 = { version = "3.0", default-features = false, features = ["serialization"] }
tiny-keccak   = { version = "2.0", features = ["keccak"] }
frost-core    = { path = "../../../core", default-features = false }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.3-risczero.0" }
crypto-bigint      = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2               = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
tiny-keccak        = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
